2456.	[bug]		In ACLs, ::/0 and 0.0.0.0/0 would both match any
			address, regardless of family.  They now correctly
			distinguish IPv4 from IPv6.  [RT #18559]
                        
	--- 9.6.0a1 released ---

2455.	[bug]		Stop metadata being transfered via axfr/ixfr.
			[RT #18639]

2454.	[func]		nsupdate: you can now set a default ttl. [RT #18317]

2453.	[bug]		Remove NULL pointer dereference in dns_journal_print().
			[RT #18316]

2452.	[func]		Improve bin/test/journalprint. [RT #18316]

2451.	[port]		solaris: handle runtime linking better. [RT #18356]

2450.	[doc]		Fix lwresd docbook problem for manual page.
			[RT #18672]

2449.	[placeholder]

2448.	[func]		Add NSEC3 support. [RT #15452]

2447.	[cleanup]	libbind has been split out as a seperate product.

2446.	[func]		Add a new log message about build options on startup.
			A new command-line option '-V' for named is also
			provided to show this information. [RT# 18645]

2445.	[doc]		ARM out-of-date on empty reverse zones (list includes
			RFC1918 address, but these are not yet compiled in).
			[RT #18578]

2444.	[port]		Linux, FreeBSD, AIX: Turn off path mtu discovery
			(clear DF) for UDP responses and requests.

2443.	[bug]		win32: UDP connect() would not generate an event,
			and so connected UDP sockets would never clean up.
			Fix this by doing an immediate WSAConnect() rather
			than an io completion port type for UDP.

2442.	[bug]		A lock could be destroyed twice. [RT# 18626]

2441.   [bug]           isc_radix_insert() could copy radix tree nodes
			incompletely. [RT #18573]

2440.   [bug]		named-checkconf used an incorrect test to determine
			if an ACL was set to none.

2439.   [bug]		Potential NULL dereference in dns_acl_isanyornone().
			[RT #18559]

2438.   [bug]		Timeouts could be logged incorrectly under win32.

2437.	[bug]		Sockets could be closed too early, leading to
			inconsistent states in the socket module. [RT #18298]
